2009-08-07  Andrew Overholt  <overholt@redhat.com>

	* plugin.properties: Change provider from Eclipse.org to Eclipse.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/profiling/tests/ProfileTestsPlugin.java: Removed.
	* src/org/eclipse/linuxtools/internal/profiling/tests/ProfileTestsPlugin.java: New file.
	* .project: Enabled API analysis. 
	* META-INF/MANIFEST.MF: Export internal package.

2009-06-23  Elliott Baron  <ebaron@redhat.com>

	* AbstractTest.java (createConfiguration): Throw CoreException.
	(createProject): Use IndexSetupParticipant to control indexer. 

2009-05-12  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: New deps.
	* AbstractTest.java (createProject): Preemptively add ManagedBuild and ScannerConfig
	natures before project is imported for #273079.

2009-04-21  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Added new deps for controlling Indexer.
	* AbstractTest.java (createProject): Turn off workspace building,
	turn off indexer while creating.
	(createProjectAndBuild): Make protected.
	(buildProject): Build type from INCREMENTAL to FULL. Make protected.

2009-04-07  Elliott Baron  <ebaron@redhat.com>

	* AbstractTest.java (deleteProject): Wrap this in a IWorkspaceRunnable.

2009-04-03  Elliott Baron  <ebaron@redhat.com>

	* Messages.java: New file.
	* messages.properties: New file.
	* AbstractTest.java (createConfiguration): If binary not found,
	fail with informative error.
	(buildProject): Refresh workspace in IWorkspaceRunnable.
	* AbstractTest.java (createProject): Refactored "Debug".
	(createConfiguration): Use job with buildRule, taken from ManagedBuilder tests.
	* META-INF/MANIFEST.MF: 0.2.0 version.	

2009-03-18  Elliott Baron  <ebaron@redhat.com>

	* AbstractTest.java (createProject): Split into creation and building.
	(createProjectAndBuild): Renamed from createProject.
	(buildProject): New method.

2009-02-03  Elliott Baron  <ebaron@redhat.com>
